--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ sperax/SPA_USDs_Dynamic_Farm",
-    "create-local": "graph create --node http://localhost:8020/ sperax/SPA_USDs_Dynamic_Farm",
-    "remove-local": "graph remove --node http://localhost:8020/ sperax/SPA_USDs_Dynamic_Farm",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 sperax/SPA_USDs_Dynamic_Farm"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ sperax/dynamic-spa-usds",
+    "create-local": "graph create --node http://localhost:8020/ sperax/dynamic-spa-usds",
+    "remove-local": "graph remove --node http://localhost:8020/ sperax/dynamic-spa-usds",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 sperax/dynamic-spa-usds"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.26.0",
