--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -53,6 +53,56 @@ dataSources:
           handler: handleRewardsClaimed
       file: ./src/SPA_USDs_Dynamic_Farm.ts
   - kind: ethereum
+    name: USDs_USDC_Dynamic_Farm
+    network: arbitrum-one
+    source:
+      address: "0x7775Cd662ACF952101acE08a7144C8Bb7d5ef2bE"
+      abi: USDs_USDC_Dynamic_Farm
+      startBlock: 19293730
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - CooldownInitiated
+        - CooldownPeriodUpdated
+        - DepositPaused
+        - DepositWithdrawn
+        - Deposited
+        - EmergencyClaim
+        - FundsRecovered
+        - OwnershipTransferred
+        - PoolUnsubscribed
+        - RewardRateUpdated
+        - RewardsClaimed
+      abis:
+        - name: USDs_USDC_Dynamic_Farm
+          file: ./abis/USDs_USDC_Dynamic_Farm.json
+      eventHandlers:
+        - event: CooldownInitiated(indexed address,uint256,uint256)
+          handler: handleCooldownInitiated
+        - event: CooldownPeriodUpdated(uint256,uint256)
+          handler: handleCooldownPeriodUpdated
+        - event: DepositPaused(bool)
+          handler: handleDepositPaused
+        - event: DepositWithdrawn(indexed address,uint256,uint256,uint256,uint256,uint256)
+          handler: handleDepositWithdrawn
+        - event: Deposited(indexed address,bool,uint256,uint256)
+          handler: handleDeposited
+        - event: EmergencyClaim(indexed address)
+          handler: handleEmergencyClaim
+        - event: FundsRecovered(indexed address,uint256)
+          handler: handleFundsRecovered
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: PoolUnsubscribed(indexed address,uint256,uint8,uint256,uint256,uint256)
+          handler: handlePoolUnsubscribed
+        - event: RewardRateUpdated(uint8,uint256,uint256)
+          handler: handleRewardRateUpdated
+        - event: RewardsClaimed(indexed address,uint8,uint256,uint256,uint256,uint256)
+          handler: handleRewardsClaimed
+      file: ./src/USDs_USDC_Dynamic_Farm.ts
+  - kind: ethereum
     name: NonFungiblePositionManager
     network: arbitrum-one
     source:
