--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -129,3 +129,53 @@ dataSources:
           handler: handleDecreaseLiquidity
         - event: IncreaseLiquidity(indexed uint256,uint128,uint256,uint256)
           handler: handleIncreaseLiquidity
+  - kind: ethereum
+    name: l2daoUsdsFarm
+    network: arbitrum-one
+    source:
+      address: "0x39Eb38cf2cC8b4Ff77817e2Ada6bA64e40a4d8Ea"
+      startBlock: 20982396
+      abi: l2daoUsdsFarm
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - CooldownInitiated
+        - CooldownPeriodUpdated
+        - DepositPaused
+        - DepositWithdrawn
+        - Deposited
+        - EmergencyClaim
+        - FundsRecovered
+        - OwnershipTransferred
+        - PoolUnsubscribed
+        - RewardRateUpdated
+        - RewardsClaimed
+      abis:
+        - name: l2daoUsdsFarm
+          file: ./abis/l2daoUsdsFarm.json
+      eventHandlers:
+        - event: CooldownInitiated(indexed address,uint256,uint256)
+          handler: handleCooldownInitiated
+        - event: CooldownPeriodUpdated(uint256,uint256)
+          handler: handleCooldownPeriodUpdated
+        - event: DepositPaused(bool)
+          handler: handleDepositPaused
+        - event: DepositWithdrawn(indexed address,uint256,uint256,uint256,uint256,uint256[])
+          handler: handleDepositWithdrawn
+        - event: Deposited(indexed address,bool,uint256,uint256)
+          handler: handleDeposited
+        - event: EmergencyClaim(indexed address)
+          handler: handleEmergencyClaim
+        - event: FundsRecovered(indexed address,address,uint256)
+          handler: handleFundsRecovered
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: PoolUnsubscribed(indexed address,uint8,uint256,uint256,uint256,uint256[])
+          handler: handlePoolUnsubscribed
+        - event: RewardRateUpdated(address,uint256[],uint256[])
+          handler: handleRewardRateUpdated
+        - event: RewardsClaimed(indexed address,uint8,uint256,uint256,uint256,uint256[])
+          handler: handleRewardsClaimed
+      file: ./src/l2daoUsdsMapping.ts
