--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     source:
       address: "0x84f7F3246fD8beAAc8Af4aB08a2161506Cb97174"
       abi: SPA_USDs_Dynamic_Farm
-      startBlock: 20982396
+      startBlock: 14515692
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -58,7 +58,7 @@ dataSources:
     source:
       address: "0x7775Cd662ACF952101acE08a7144C8Bb7d5ef2bE"
       abi: USDs_USDC_Dynamic_Farm
-      startBlock: 20982396
+      startBlock: 19293730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -108,7 +108,7 @@ dataSources:
     source:
         address: "0xc36442b4a4522e871399cd717abdd847ab11fe88"
         abi: NonFungiblePositionManager
-        startBlock: 20982396
+        startBlock: 14515692
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -179,3 +179,43 @@ dataSources:
         - event: RewardsClaimed(indexed address,uint8,uint256,uint256,uint256,uint256[])
           handler: handleRewardsClaimed
       file: ./src/l2daoUsdsMapping.ts
+  - kind: ethereum
+    name: erc20USDs
+    network: arbitrum-one
+    source:
+      address: "0xd74f5255d557944cf7dd0e45ff521520002d5748"
+      abi: erc20USDs
+      startBlock: 20982396
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Transfer
+      abis:
+        - name: erc20USDs
+          file: ./abis/erc20contract.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/tokens/USDsMapping.ts
+  - kind: ethereum
+    name: erc20L2DAO
+    network: arbitrum-one
+    source:
+      address: "0x2cab3abfc1670d1a452df502e216a66883cdf079"
+      abi: erc20L2DAO
+      startBlock: 20982396
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Transfer
+      abis:
+        - name: erc20L2DAO
+          file: ./abis/erc20contract.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/tokens/L2DAOMapping.ts
